--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,28 @@
-body {
-  margin: 0;
-  font-family: sans-serif;
+:root {
+  --cal-black: #000;
+  --cal-gray: #bbbbbb;
+  --cal-lightgray: #f7f7f7;
+  --cal-white: #fff;
+  --cal-selected: #b9d7ea;
+  --cal-preselected: #d6e6f2;
 }
-#cal {
+
+.cals-grid {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  padding: 1rem;
 }
 .cal-month {
-  border: 1px solid black;
+  border: 1px solid var(--cal-gray);
+  background-color: var(--cal-lightgray);
 }
 .cal-month-name {
   padding: 0.5rem;
   text-align: center;
   font-weight: bold;
   text-transform: capitalize;
-  background-color: black;
-  color: white;
+  background-color: var(--cal-black);
+  color: var(--cal-white);
 }
 .cal-day-names {
   display: grid;
@@ -27,7 +32,12 @@ body {
   padding: 0.5rem;
   text-align: center;
   font-size: 0.8rem;
-  background-color: lightyellow;
+  background-color: var(--cal-white);
+  border-bottom: 1px solid var(--cal-gray);
+
+  &:last-child {
+    border-right: none;
+  }
 }
 .cal-grid {
   display: grid;
@@ -40,15 +50,14 @@ body {
   padding: 0.5rem;
   font-size: 0.8rem;
   background-color: white;
-  border: 1px solid black;
-  border-right: 1px solid transparent;
-  margin-top: -1px;
-  margin-left: -1px;
+  outline: 1px solid var(--cal-gray);
 
   &--selected {
-    background-color: lightskyblue;
+    // color: var(--cal-white);
+    // outline: 1px solid var(--cal-white);
+    background-color: var(--cal-selected);
   }
   &--preselected {
-    background-color: lightcyan;
+    background-color: var(--cal-preselected);
   }
 }
