disable dates prior to today

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,4 +60,14 @@
   &--preselected {
     background-color: var(--cal-preselected);
   }
+
+  &--today {
+    color: red;
+    font-weight: bold;
+  }
+
+  &--disabled {
+    color: var(--cal-lightgray);
+    pointer-events: none;
+  }
 }
